Calculate duration more reliably and fix NPE's on null codec strings